--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -35,6 +35,7 @@
         <li id="menu-bus-reservation">버스예약</li>
         <li id="menu-bus-log">버스예약내역</li>
         <li id="menu-station">노선 및 정거장</li>
+        <li id="menu-bus-location" onclick="location.href='/bus/location'">버스 위치 조회</li>
         <li id="menu-notice">공지사항</li>
         <li id="menu-logout" onclick="location.href='/login'">로그아웃</li>
     </ul>
