--- a/src/main/resources/templates/reservation-history.html
+++ b/src/main/resources/templates/reservation-history.html
@@ -14,10 +14,10 @@
     <div class="container">
         <h2>예약 내역</h2>
 
-        <!-- 예약 내역 없을 때 -->
+
         <div th:if="${#lists.isEmpty(reservations)}">예약 내역이 없습니다.</div>
 
-        <!-- 예약 내역 있을 때 -->
+
         <table th:if="${!#lists.isEmpty(reservations)}"
                border="1"
                style="width:100%; border-collapse: collapse; text-align: center;">
@@ -54,3 +54,13 @@
 </main>
 </body>
 </html>
+
+<!-- HistoryControllerTest 코드 실행 시에 쓰이는 임시 html 코드, 테스트 할 경우 위에 코드는 주석 처리하고 이 코드 사용 바람
+<!DOCTYPE html>
+<html>
+<head><title>테스트용 페이지</title></head>
+<body>
+<p>테스트용 reservation-history 페이지입니다.</p>
+</body>
+</html>
+-->
